# graphql_rs

./: .gitignore  Cargo.toml  Makefile  README.md  docker-compose.yaml  migrate.sh
db/migrations/: 20251130163845_init.down.sql  20251130163845_init.up.sql
rust_service/: Cargo.toml  Dockerfile
rust_service/src/: config.rs  connection.rs  context.rs  main.rs  query.rs  service.rs  state.rs
rust_service/src/router/: mod.rs
rust_service/src/router/gql/: gql.rs  mod.rs
rust_service/src/router/ping/: mod.rs  ping.rs
src/: config.rs  db.rs  main.rs  query.rs  service.rs
src/router/: mod.rs
src/router/gql/: gql.rs  mod.rs
src/router/ping/: mod.rs
